@@ -30,14 +30,14 @@ public interface IAttackAbility {
             if (!player.level.isClientSide)
             {
                 try {
-                    ExplosionAbility explosionAbility = new ExplosionAbility(player, player.level, target.getX(), target.getY(), target.getZ(), 3);
+                    ExplosionAbility explosionAbility = new ExplosionAbility(player, player.level, target.getX(), target.getY(), target.getZ(), 1);
                     explosionAbility.setSpecificEntity(target);
                     explosionAbility.setStaticDamage(5);
                     explosionAbility.setExplosionSound(true);
                     explosionAbility.setDamageOwner(false);
                     explosionAbility.setDestroyBlocks(false);
                     explosionAbility.setFireAfterExplosion(false);
-                    explosionAbility.setSmokeParticles(new CommonExplosionParticleEffect(3));
+                    explosionAbility.setSmokeParticles(new CommonExplosionParticleEffect(2));
                     explosionAbility.setDamageEntities(true);
                     explosionAbility.doExplosion();
                 }
